JumpScript/tests/baselines/reference/errorOnInitializerInInterfaceProperty.errors.txt
tests/cases/compiler/errorOnInitializerInInterfaceProperty.jump(2,19): error TS1246: An interface property cannot have an initializer.


==== tests/cases/compiler/errorOnInitializerInInterfaceProperty.jump (1 errors) ====
    interface Foo {
        bar: number = 5;
                      ~
!!! error TS1246: An interface property cannot have an initializer.
    }
    